8235142: JDK-8193255 backport broke bootstrap with JDK 10 Summary: Use Paths.get() over Path.of() Reviewed-by: goetz, martin, clanger